fixtures/cs-enc-04/bad/node-crypto-ecb.ts
import crypto from "node:crypto";
export function encrypt(data: Buffer, key: Buffer, iv: Buffer) {
	return crypto.createCipheriv("aes-256-ecb", key, iv);
}
